update client/src/styles/components/_homepage: add min-height attribute to __hero element of homepage to prevent absolute child from being hidden, or covered

--- a/client/src/styles/components/_homepage.scss
+++ b/client/src/styles/components/_homepage.scss
@@ -2,5 +2,6 @@
 
   &__hero {
     margin-top: 2rem;
+    min-height: 12.5rem;
   }
 }
